tests/errors/string01.c
int main(void){
	int lol = 2;
	char* string = "

	"
}
